2003-09-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in: 
	Added Bugzilla information.

2003-09-02  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (error_on_start), (reread_cd),
	(device_changed_cb): exit when no CD drives could be found, don't
	g_strdup_printf when gtk_message_dialog_new handles printf format
	just fine (fixes memleaks) (both patches from Jonathan Blandford
	<jrb@redhat.com>)

2003-09-02  Thomas Vander Stichele <thomas at apestaart dot org>

	* data/Makefile.am:
	print warning and continue when failing to install gconf schemas

2003-09-02  Bastien Nocera  <hadess@hadess.net>
  
	* data/sound-juicer.glade: set the extract buttons to be disabled by default

	* src/sj-main.c:
	poll for tray_is_opened every 2 seconds, clear the list when the
	tray gets opened, update the list when the tray closes (Closes:
	#notting's wishlist)

2003-09-02  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata.[ch]:
	Added an abstract interface to the metadata lookup.
	* src/sj-metadata-musicbrainz.[ch]:
	Added a MusicBrainz implementation.
	* src/sj-musicbrainz.[ch]:
	Removed, deprecated by above changes.
	* src/sj-main.c:
	Use the new SjMetadata objects.

	* tests/mb-test.c:
	Updated code for new SjMetadata object.
	
	* src/Makefile.am:
	* tests/Makefile.am:
	Updated compile lines for new filenames.
	
2003-09-01  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.h:
	* src/cd-drive.c: (linux_bsd_media_type):
	* src/cd-drive.h: updated from libbacon
	* src/sj-error.h: added more fine-grained errors
	* src/sj-extracting.c: (build_filename):
	* src/sj-extractor.c: (encoding_format_get_type),
	(sj_extractor_instance_init), (sj_extractor_finalize),
	(build_encoder), (build_pipeline), (sj_extractor_set_device),
	(sj_extractor_set_paranoia), (sj_extractor_supports_format):
	* src/sj-extractor.h:
	* src/sj-main.c: (error_on_start), (on_destory_event), (reread_cd),
	(device_changed_cb), (format_changed_cb), (on_reread_activate),