@@ -1,3 +1,10 @@
+2003-09-03  Bastien Nocera  <hadess@hadess.net>
+
+	* src/sj-main.c: (reread_cd):
+	Clear the UI and don't do any lookup if the CD isn't an audio CD
+	* src/sj-util.[ch]:
+	Added is_audio_cd
+
 2003-09-03  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.desktop.in: 
